Split dev and prod rollup confs

--- a/build-web-component/index.html
+++ b/build-web-component/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="dist/counter.min.js"></script>
+    <script src="dist/dev.counter.min.js"></script>
   </head>
   <body>
     <counter-element></counter-element>
