Add polyfills for IE11

--- a/build-web-component/index.html
+++ b/build-web-component/index.html
@@ -1,6 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
+    <!-- load the webcomponents loader, which injects the necessary polyfill bundle -->
+    <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+
     <script src="dist/counter.min.js"></script>
   </head>
   <body>
