add postcss plugin and override rollup prod for dev

--- a/build-web-component/index.html
+++ b/build-web-component/index.html
@@ -4,7 +4,7 @@
     <!-- load the webcomponents loader, which injects the necessary polyfill bundle -->
     <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <script src="dist/counter.min.js"></script>
+    <script src="dist/counter-1.0.0.min.js"></script>
   </head>
   <body>
     <counter-element></counter-element>
