feat(build): add multiFolder build

--- a/build-web-component/counter/index.html
+++ b/build-web-component/counter/index.html
@@ -3,12 +3,9 @@
   <head>
     <!-- load the webcomponents loader, which injects the necessary polyfill bundle -->
     <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-
-    <script src="dist/counter1.0.0.min.js"></script>
-    <script src="dist/counterV21.0.0.min.js"></script>
+    <script src="../dist/counter.min.js"></script>
   </head>
   <body>
     <counter-element></counter-element>
-    <counter-element-v2></counter-element-v2>
   </body>
 </html>
