init Readme && build all Components

--- a/build-web-component/index.html
+++ b/build-web-component/index.html
@@ -3,9 +3,13 @@
   <head>
     <!-- load the webcomponents loader, which injects the necessary polyfill bundle -->
     <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-
     <script src="dist/counter1.0.0.min.js"></script>
-    <script src="dist/counterV21.0.0.min.js"></script>
+    <script src="dist/counterV2.1.0.0.min.js"></script>
+    <style type="text/css">
+      span {
+        border: 5px solid black;
+      }
+    </style>
   </head>
   <body>
     <counter-element></counter-element>
