--- a/build-web-component/counterV2/index.html
+++ b/build-web-component/counterV2/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- load the webcomponents loader, which injects the necessary polyfill bundle -->
-    <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../dist/counterV2.min.js"></script>
   </head>
   <body>
