--- a/build-web-component/elements/counter/index.html
+++ b/build-web-component/elements/counter/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <!-- load the webcomponents loader, which injects the necessary polyfill bundle -->
-    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="../dist/counter.min.js"></script>
+    <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="../../dist/counter.min.js"></script>
   </head>
   <body>
     <counter-element></counter-element>
