--- a/build-web-component/elements/counter/index.html
+++ b/build-web-component/elements/counter/index.html
@@ -3,7 +3,8 @@
   <head>
     <!-- load the webcomponents loader, which injects the necessary polyfill bundle -->
     <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="../../dist/counter.min.js"></script>
+    <script type="module" src="../../dist/counter.esm.min.js"></script>
+    <script nomodule src="../../dist/counter.es5.min.js" defer></script>
   </head>
   <body>
     <counter-element></counter-element>
