Initiate bo-string-concat

--- a/build-web-component/elements/bo-string-concat/index.html
+++ b/build-web-component/elements/bo-string-concat/index.html
@@ -3,10 +3,10 @@
   <head>
     <!-- load the webcomponents loader, which injects the necessary polyfill bundle -->
     <script src="../../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script type="module" src="../../dist/counterV2.esm.min.js"></script>
-    <script nomodule src="../../dist/counterV2.es5.min.js" defer></script>
+    <script type="module" src="../../dist/bo-string-concat.esm.min.js"></script>
+    <script nomodule src="../../dist/bo-string-concat.es5.min.js" defer></script>
   </head>
   <body>
-    <counter-element-v2></counter-element-v2>
+    <bo-string-concat string1="toto" string2="tata"></bo-string-concat>
   </body>
 </html>
