--- a/build-web-component/demo.html
+++ b/build-web-component/demo.html
@@ -4,12 +4,12 @@
     <!-- load the webcomponents loader, which injects the necessary polyfill bundle -->
     <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script type="module" src="dist/counter.1.0.0.esm.min.js"></script>
-    <script type="module" src="dist/counterV2.1.0.0.esm.min.js"></script>
+    <script type="module" src="dist/bo-string-concat.1.0.0.esm.min.js"></script>
     <script nomodule src="dist/counter.1.0.0.es5.min.js"></script>
-    <script nomodule src="dist/counterV2.1.0.0.es5.js"></script>
+    <script nomodule src="dist/bo-string-concat.1.0.0.es5.min.js"></script>
   </head>
   <body>
     <counter-element></counter-element>
-    <counter-element-v2></counter-element-v2>
+    <bo-string-concat></bo-string-concat>
   </body>
 </html>
