--- a/build-web-component/elements/bo-expanded-select/index.html
+++ b/build-web-component/elements/bo-expanded-select/index.html
@@ -6,10 +6,20 @@
     <script nomodule src="../../dist/bo-expanded-select.es5.min.js" defer></script>
   </head>
   <body>
-    <bo-expanded-select>
-      <p>Select attribute:</p>
-      <bo-expanded-select-option value="Joseph">Username</bo-expanded-select-option>
-      <bo-expanded-select-option value="Martin">Name</bo-expanded-select-option>
+    <!--    <bo-expanded-select>
+      <p>Titre</p>
+      <select>
+        <option id="" value="DefaultValue"></option>
+        <option id="label" value="Username" selected>Label</option>
+        <option id="width" value="4">Width</option>
+      </select>
+    </bo-expanded-select>-->
+
+    <bo-expanded-select selected="label">
+      <div slot="label">Label To</div>
+      <bo-expanded-select-option id="" value="DefaultValue"></bo-expanded-select-option>
+      <bo-expanded-select-option id="label" value="Username">Label</bo-expanded-select-option>
+      <bo-expanded-select-option id="width" value="4">Width</bo-expanded-select-option>
     </bo-expanded-select>
   </body>
 </html>
