--- a/build-web-component/elements/bo-switch-config/index.html
+++ b/build-web-component/elements/bo-switch-config/index.html
@@ -6,10 +6,20 @@
     <script nomodule src="../../dist/bo-switch-config.es5.min.js" defer></script>
   </head>
   <body>
-    <bo-switch-config
-      id="wc1"
-      from='{"label":{"label":"Label","value":"Username","bond":"interpolation"},"width":{"label":"Width","value":4,"bond":"constant"}}'
-      to='{"titre":{"label":"Titre","value":"DefaultValue","bond":"interpolation"},"width":{"label":"Width","value":8,"bond":"constant"}}'
-    ></bo-switch-config>
+    <style>
+      #popup {
+        width: 800px;
+        height: 800px;
+        border: 3px solid #7f7f7f;
+        margin: 0 auto;
+      }
+    </style>
+    <div id="popup">
+      <bo-switch-config
+        id="wc1"
+        from='{"label":{"label":"Label","value":"Username","bond":"interpolation"},"width":{"label":"Width","value":4,"bond":"constant"}}'
+        to='{"titre":{"label":"Titre","value":"DefaultValue","bond":"interpolation"},"width":{"label":"Width","value":8,"bond":"constant"}}'
+      ></bo-switch-config>
+    </div>
   </body>
 </html>
