--- a/build-web-component/elements/bo-expanded-select/index.html
+++ b/build-web-component/elements/bo-expanded-select/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <bo-expanded-select selected="">
-      <div slot="label">Label To</div>
+      <div slot="label">Titre</div>
       <bo-expanded-select-option id="" value="DefaultValue"></bo-expanded-select-option>
       <bo-expanded-select-option id="label" value="Username">Label</bo-expanded-select-option>
       <bo-expanded-select-option id="width" value="4">Width</bo-expanded-select-option>
